
 Kana no quiz - Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Version 1.5 (2006-XX-XX):

- System-wide installation & per-user configuration.


* Version 1.4b (2006-01-01):

- Language confusion between Serbian & Swedish with the
Tkinter interface corrected.
- Update of the Swedish translation.


* Version 1.4 (2005-12-14):

- You can now choose several portions of the same kana set to
train upon in the same time (if no portion selected in a set,
that one becomes disabled :p).
- Random list answer mode now permits up to five choices. :p
- Support for the 2 other popular romanization systems: the
Kunrei-shiki's and the Nihon-shiki's. (Because they are really
less used worldwide than the Hepburn's, choosing one of these
systems remains for people who know what they are doing.)
- Some informations are now displayed during the quiz (romani-
zation system used and question number) and you can choose to
stop it after every answer (useful for example if you realized
the quiz you began to perform is truly too difficult).
- Bug fix: no more endless quiz!
- Some improvements over the GTK+ interface, and replacement
of the depracted widgets.
- Addition of a marvellous icon (GTK+ version)!
- Translations update (except for Brazilian).


* Version 1.2d (2005-03-17):

- Addition of a Serbian translation.
- Some (English) spelling corrections.


* Version 1.2c (2005-02-14):

- A bug created in the last version has been fixed...
Now the ``kana engine" should be clean ! :-D


* Version 1.2b (2005-02-07):

- Bug fix : prevention, while doing the quiz using the random
list mode, of getting the right answer appearing twice in
the list.
- The interface type used by Kana no quiz is now indicated
in the ``About" window (in case that you don't see! ^^).


* Version 1.2 (2005-01-23):

- The Sweedish translation has been finaly updated.
- In the GTK version, we can choose the length of the quiz
from 1 to 200 questions.
- Addition of a new option to not repeat the same kana