@@ -47,19 +47,20 @@ setup(
 	version			=	'1.5cvs',
 	description		=	'A kana memorization tool.',
 	author			=	'Choplair-network',
-	author_email	=	'contact@choplair.org',
+	author_email		=	'contact@choplair.org',
 	url				=	'http://www.choplair.org/',
-	download_url	=	'http://developer.berlios.de/project/filelist.php?group_id=1783',
+	download_url		=	'http://developer.berlios.de/project/filelist.php?group_id=1783',
 	license			=	'GNU General Public License',
-	packages		=	['kana-no-quiz'],
+	packages			=	['kana-no-quiz'],
 	package_dir		=	{'kana-no-quiz': 'data/py'},
 	scripts			=	scriptfiles,
-	data_files		=	datafiles
+	data_files			=	datafiles
 	)
 
 if "install" in sys.argv:
-	# Post install stuff (Unix).
+	#Post-install stuffs (Unix).
 	if os.name=="posix":
-		exec_script = "/usr/local/bin/kana-no-quiz"
-		print "Putting Kana no quiz executable script into `%s'." % os.path.dirname(exec_script)
-		do("cp ./data/py/__init__.py %s; chmod +x %s" % (exec_script,exec_script))
+		import shutil
+		startup_script = "/usr/local/bin/kana-no-quiz"
+		print "Putting Kana no quiz start-up script into `%s'." % os.path.dirname(exec_script)
+		shutil.copy("./data/script/kana-no-quiz_startup.pyw",startup_script)
