@@ -5,6 +5,9 @@
 * Version 1.5 (2006-XX-XX):
 
 - System-wide installation & per-user configuration.
+- More complete quiz result informations.
+- A quit button in the main window.
+- Windows binary installation package.
 
 
 * Version 1.4b (2006-01-01):
